# independent-trees-conjecture

./: CMakeLists.txt  Graph.cpp  Graph.h  GraphGenerator.cpp  GraphGenerator.h  graph_test.cpp  main.cpp
scripts/: count_spanning_trees.py  count_spanning_trees_test.py  draw_graph.py  draw_graph_test.py
